changed order->transactions and fixed tests
